--- a/index.html
+++ b/index.html
@@ -3,45 +3,46 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Colágeno Azen + Espirulina Azul | Péptidos Bioactivos para Piel y Articulaciones</title>
-  <meta name="description" content="Colágeno Azen con espirulina azul: péptidos bioactivos hidrolizados con vitamina C y antioxidantes. Beneficios para piel, articulaciones, cabello y uñas. Envíos en Colombia." />
-  <link rel="canonical" href="https://TU_USUARIO.github.io/TU_REPO/" />
-  <meta name="theme-color" content="#0a58ca" />
+  <title>Resveratrol AZEN 98% Pureza | Qué es y Beneficios</title>
+  <meta name="description" content="Resveratrol AZEN: suplemento antioxidante 98% pureza con Glutatión y NAD (B3). Descubre qué es el resveratrol, sus beneficios para la salud cardiovascular, energía y envejecimiento saludable. Domicilios en Medellín." />
+  <link rel="canonical" href="https://resveratrolazen.github.io/Medellin/" />
+  <meta name="theme-color" content="#6c2bd9" />
 
   <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="Colágeno Azen + Espirulina Azul" />
-  <meta property="og:description" content="Péptidos bioactivos con ficocianina y vitamina C. Soporte para piel, articulaciones, cabello y uñas." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/img/COLAGENO-ESPIRULINA-AZUL-500gr.webp" />
-  <meta property="og:url" content="https://TU_USUARIO.github.io/TU_REPO/" />
+  <meta property="og:title" content="Resveratrol AZEN 98% Pureza" />
+  <meta property="og:description" content="Resveratrol con Glutatión y NAD (B3). Antioxidante premium. Envío en Medellín." />
+  <meta property="og:type" content="product" />
+  <meta property="og:image" content="frasco_resveratrol.jpeg" />
+  <meta property="og:url" content="https://resveratrolazen.github.io/Medellin/" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- SEO extras -->
-  <meta name="keywords" content="colágeno, colágeno hidrolizado, espirulina azul, ficocianina, péptidos bioactivos, colageno piel, colageno articulaciones, suplemento de colágeno en Colombia" />
+  <meta name="keywords" content="resveratrol, qué es el resveratrol, beneficios resveratrol, resveratrol Medellín, suplemento antioxidante, glutatión, NAD B3, envejecimiento saludable" />
 
   <style>
-    :root{--azul:#0a58ca;--azul2:#0e6dfd;--osc:#0b2240;--gris:#eef3fb;--txt:#1b1b1f}
+    :root{--morado:#6c2bd9;--morado2:#9d4edd;--osc:#0b0220;--gris:#eef3fb;--txt:#1b1b1f}
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial,sans-serif;color:var(--txt);line-height:1.65}
-    a{color:var(--azul2);text-decoration:none}
+    html,body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial,sans-serif;color:var(--txt);line-height:1.65}
+    a{color:var(--morado);text-decoration:none}
     header{position:sticky;top:0;z-index:20;background:rgba(255,255,255,.95);backdrop-filter:saturate(160%) blur(6px);border-bottom:1px solid #e6ecf7}
     .wrap{max-width:1100px;margin:auto;padding:0 16px}
-    .nav{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:12px 0;position:relative}
     .brand{font-weight:800;color:var(--osc)}
     .menu a{margin:0 10px;font-weight:600}
     .hero{display:grid;grid-template-columns:1.1fr .9fr;gap:28px;align-items:center;padding:36px 0}
     .hero h1{font-size:clamp(28px,4vw,44px);margin:0 0 12px;color:var(--osc)}
-    .hero img{width:100%;max-width:480px;border-radius:14px;background:#fff;box-shadow:0 16px 36px rgba(10,88,202,.15)}
+    .hero p{font-size:1.05rem}
+    .hero img{width:100%;max-width:480px;border-radius:14px;background:#fff;box-shadow:0 16px 36px rgba(109,40,217,.15)}
     .btn{display:inline-block;padding:12px 18px;border-radius:12px;font-weight:700}
-    .btn.primary{background:var(--azul);color:#fff}
+    .btn.primary{background:var(--morado);color:#fff}
     section{padding:56px 0;border-top:1px solid #f0f4fb}
     h2{color:var(--osc);margin-top:0}
     .grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:24px}
     .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
     .card{background:#fff;border:1px solid #e9eef6;border-radius:14px;padding:18px}
-    ul{margin:10px 0 0 18px}
+    ul.bul{margin:10px 0 0 18px}
     .note{color:#475569;font-size:.95rem}
-    .banner{background:linear-gradient(90deg,var(--azul),var(--azul2));color:#fff;border-radius:16px;padding:24px;text-align:center}
+    .banner{background:linear-gradient(90deg,var(--morado),var(--morado2));color:#fff;border-radius:16px;padding:24px;text-align:center}
     .blog article{background:#fff;border:1px solid #e9eef6;border-radius:16px;padding:20px;margin-bottom:24px}
     .blog h3{margin-top:0;color:var(--osc)}
     .faq summary{cursor:pointer;font-weight:700}
@@ -49,12 +50,75 @@
     footer{background:#0a1020;color:#c9d3ea;padding:28px 0;margin-top:40px}
     footer a{color:#c9e1ff}
     @media (max-width:940px){.hero{grid-template-columns:1fr}.grid-2{grid-template-columns:1fr}.grid-3{grid-template-columns:1fr}}
+
+    /* Menú hamburguesa */
+    .menu-toggle { display: none; font-size: 28px; cursor: pointer; }
+    @media (max-width: 768px) {
+      nav.menu {
+        display: none;
+        flex-direction: column;
+        background: #fff;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        border-top: 1px solid #eee;
+        padding: 10px 0;
+      }
+      nav.menu.active { display: flex; }
+      nav.menu a { padding: 12px 0; text-align: center; }
+      .menu-toggle { display: block; }
+    }
   </style>
+
+  <!-- JSON-LD Producto mejorado -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Product",
+    "name": "Resveratrol AZEN 98% Pureza",
+    "image": "https://resveratrolazen.github.io/Medellin/frasco_resveratrol.jpeg",
+    "description": "Suplemento antioxidante con Resveratrol 98% pureza, Glutatión y NAD (B3). Beneficios para salud cardiovascular, energía celular y envejecimiento saludable.",
+    "brand": { "@type": "Brand", "name": "AZEN" },
+    "aggregateRating": { "@type": "AggregateRating", "ratingValue": "5", "reviewCount": "15" },
+    "review": [{
+      "@type": "Review",
+      "author": "Cliente verificado",
+      "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" },
+      "reviewBody": "Muy buen suplemento, noté más energía y bienestar después de 2 meses de uso."
+    }],
+    "offers": {
+      "@type": "Offer",
+      "priceCurrency": "COP",
+      "price": "56900",
+      "priceValidUntil": "2025-12-31",
+      "availability": "https://schema.org/InStock",
+      "url": "https://wa.me/573053447946",
+      "hasMerchantReturnPolicy": {
+        "@type": "MerchantReturnPolicy",
+        "applicableCountry": "CO",
+        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+        "merchantReturnDays": 7
+      },
+      "shippingDetails": {
+        "@type": "OfferShippingDetails",
+        "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "COP" },
+        "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "CO" },
+        "deliveryTime": {
+          "@type": "ShippingDeliveryTime",
+          "handlingTime": { "@type": "QuantitativeValue", "minValue": 1, "maxValue": 2, "unitCode": "d" },
+          "transitTime": { "@type": "QuantitativeValue", "minValue": 2, "maxValue": 5, "unitCode": "d" }
+        }
+      }
+    }
+  }
+  </script>
 </head>
 <body>
 <header>
   <div class="wrap nav">
-    <div class="brand">AZEN • <span style="color:var(--azul)">Colágeno</span></div>
+    <div class="brand">AZEN • <span style="color:var(--morado)">Resveratrol</span></div>
+    <span class="menu-toggle" onclick="document.querySelector('nav.menu').classList.toggle('active')">☰</span>
     <nav class="menu">
       <a href="#inicio">Inicio</a>
       <a href="#que-es">Qué es</a>
@@ -67,120 +131,8 @@
   </div>
 </header>
 
-<main id="inicio" class="wrap">
-  <!-- HERO -->
-  <section class="hero">
-    <div>
-      <h1>Colágeno Azen + Espirulina Azul</h1>
-      <p>Fórmula bionutracéutica con <strong>péptidos bioactivos</strong> y <strong>espirulina azul</strong> (ficocianina) para piel, articulaciones, cabello y uñas. Enriquecida con <strong>vitamina C</strong> y antioxidantes.</p>
-      <a class="btn primary" href="https://wa.me/57XXXXXXXXXX?text=Hola%20quiero%20Col%C3%A1geno%20Azen">Comprar por WhatsApp</a>
-    </div>
-    <div>
-      <img src="assets/img/COLAGENO-ESPIRULINA-AZUL-500gr.webp" alt="Colágeno Azen + Espirulina Azul 500g">
-    </div>
-  </section>
 
-  <!-- QUE ES -->
-  <section id="que-es" class="grid-2">
-    <div class="card">
-      <h2>¿Qué es esta fórmula?</h2>
-      <p>Fórmula bionutracéutica que fragmenta el colágeno en <b>péptidos bioactivos</b> capaces de llegar mejor a la dermis. Estimulan fibroblastos y favorecen la síntesis natural de proteínas de matriz.</p>
-      <p>La <b>espirulina azul</b> aporta <b>ficocianina</b> y <b>betacaroteno</b>, antioxidantes que neutralizan radicales libres, protegen frente al daño oxidativo y fortalecen la inmunidad.</p>
-    </div>
-    <div class="card">
-      <h2>Componentes destacados</h2>
-      <ul>
-        <li>Péptidos bioactivos de colágeno hidrolizado</li>
-        <li>Espirulina azul con ficocianina</li>
-        <li>Vitamina C (cofactor)</li>
-        <li>Aminoácidos: glicina, prolina, lisina, hidroxiprolina</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- BENEFICIOS -->
-  <section id="beneficios" class="wrap">
-    <h2>Beneficios</h2>
-    <div class="grid-3">
-      <div class="card"><h3>Piel</h3><p>Elasticidad y firmeza.</p></div>
-      <div class="card"><h3>Articulaciones</h3><p>Soporte de cartílago y movilidad.</p></div>
-      <div class="card"><h3>Cabello y uñas</h3><p>Más fuertes y saludables.</p></div>
-      <div class="card"><h3>Antioxidantes</h3><p>Neutralizan radicales libres.</p></div>
-      <div class="card"><h3>Inmunidad</h3><p>Apoyo por ficocianina.</p></div>
-      <div class="card"><h3>Recuperación</h3><p>Favorece el tejido muscular.</p></div>
-    </div>
-  </section>
-
-  <!-- COMO TOMARLO -->
-  <section id="como-tomarlo" class="wrap grid-2">
-    <div class="card">
-      <h2>¿Cómo tomarlo?</h2>
-      <p>Mezcla <b>1 porción (10 g)</b> en agua, jugo o batido, una vez al día, durante 8–12 semanas.</p>
-    </div>
-    <div class="card">
-      <h2>Precauciones</h2>
-      <p>Consulta a tu médico si estás embarazada, lactando o bajo tratamiento. No sustituye una alimentación equilibrada.</p>
-    </div>
-  </section>
-
-  <!-- BLOG -->
-  <section id="blog" class="wrap blog">
-    <h2>Blog de Colágeno</h2>
-
-    <article>
-      <h3>¿Qué es el colágeno hidrolizado y por qué es más efectivo?</h3>
-      <p>El <b>colágeno hidrolizado</b> se procesa en <em>péptidos bioactivos</em> más pequeños, fáciles de absorber, que llegan a piel y articulaciones y estimulan la síntesis de colágeno propio.</p>
-      <p>Incluye aminoácidos estructurales como glicina, prolina e hidroxiprolina. Su combinación con vitamina C potencia la formación de colágeno natural.</p>
-    </article>
-
-    <article>
-      <h3>7 beneficios de la espirulina azul</h3>
-      <ol>
-        <li>Antioxidantes potentes (ficocianina).</li>
-        <li>Protección celular frente a radicales libres.</li>
-        <li>Apoyo inmune.</li>
-        <li>Sinergia con colágeno.</li>
-        <li>Energía y vitalidad diaria.</li>
-        <li>Cabello y piel saludables.</li>
-        <li>Fácil de integrar en batidos.</li>
-      </ol>
-    </article>
-
-    <article>
-      <h3>Cómo elegir el mejor suplemento de colágeno en Colombia</h3>
-      <p>Elige siempre <b>colágeno hidrolizado</b> con <b>vitamina C</b> y antioxidantes como la <b>espirulina azul</b>. Verifica trazabilidad, pureza y etiquetado claro de ingredientes.</p>
-    </article>
-  </section>
-
-  <!-- FAQ -->
-  <section id="faq" class="wrap">
-    <h2>Preguntas frecuentes</h2>
-    <div class="faq">
-      <details><summary>¿Qué diferencia al colágeno hidrolizado?</summary><p>Se fragmenta en péptidos bioactivos que se absorben mejor.</p></details>
-      <details><summary>¿Cuánto tiempo debo tomarlo?</summary><p>Entre 8 y 12 semanas de uso constante para ver cambios.</p></details>
-      <details><summary>¿La espirulina azul aporta beneficios?</summary><p>Sí, gracias a la ficocianina y al betacaroteno antioxidante.</p></details>
-    </div>
-  </section>
-
-  <!-- CONTACTO -->
-  <section id="contacto" class="wrap grid-2">
-    <div class="card">
-      <h2>Contacto</h2>
-      <p><b>WhatsApp:</b> <a href="https://wa.me/57XXXXXXXXXX">+57 XXXXXXXXXX</a><br>
-         <b>Email:</b> contacto@azen.com<br>
-         <b>Ubicación:</b> Medellín, Colombia</p>
-    </div>
-    <div class="card">
-      <h2>Políticas</h2>
-      <p class="note">Producto de uso adulto. Este contenido es informativo y no reemplaza la asesoría médica. Términos y condiciones aplican.</p>
-    </div>
-  </section>
-</main>
-
-<footer>
-  <div class="wrap">© <span id="y"></span> AZEN. Todos los derechos reservados.</div>
-</footer>
 <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
 </body>
-  </html>
-  
+</html>
+
