--- a/index.html
+++ b/index.html
@@ -130,7 +130,232 @@
     </nav>
   </div>
 </header>
+<main id="inicio" class="wrap">
+  <!-- Hero -->
+  <section class="hero">
+    <div>
+      <h1>Resveratrol 98% pureza</h1>
+      <p class="lead">Antioxidante de alto impacto combinado con <strong>Glutatión</strong> y <strong>NAD (B3)</strong> para apoyar la salud cardiovascular, la energía celular y un envejecimiento saludable. Envío con <strong>domicilio incluido en Medellín</strong>.</p>
+      <div class="banner" style="text-align:left">
+        <h3 style="margin:0 0 8px">Haz tu pedido ahora</h3>
+        <p style="margin:0 0 12px">Atención por WhatsApp.</p>
+        <a class="btn" style="background:#fff;color:#1a001f" href="https://wa.me/573053447946">Comprar por WhatsApp</a>
+      </div>
+    </div>
+    <div class="frame">
+      <img src="frasco.png" alt="Frasco de Resveratrol AZEN 98% pureza con Glutatión y NAD B3">
+    </div>
+  </section>
 
+  <!-- Qué es -->
+  <section id="que-es" class="grid-2">
+    <div class="card">
+      <h2>¿Qué es el Resveratrol?</h2>
+      <p>El <strong>resveratrol</strong> es un polifenol natural presente en la piel de la uva, frutos rojos y el cacao. Se ha estudiado por su capacidad para <strong>neutralizar radicales libres</strong>, apoyar la <strong>función endotelial</strong> y contribuir a un <strong>envejecimiento saludable</strong>. En AZEN usamos <strong>98% pureza</strong> de la forma activa (trans-resveratrol) para maximizar su efectividad.</p>
+      <p>Nuestra fórmula combina <strong>Resveratrol + Glutatión + NAD (B3)</strong> para un enfoque integral: antioxidación, energía celular y protección frente al estrés oxidativo.</p>
+    </div>
+    <div class="card">
+      <h2>Componentes destacados</h2>
+      <ul class="bul">
+        <li>Resveratrol 98% (trans-resveratrol)</li>
+        <li>Glutatión (GSH) – defensa antioxidante celular</li>
+        <li>NAD (B3) – soporte de energía y longevidad</li>
+        <li>Excipientes de calidad y cápsulas vegetales (según presentación)</li>
+      </ul>
+      <p class="note">Presentaciones: 30 g (≈60 cápsulas), 300 g y 500 ml líquido.</p>
+    </div>
+  </section>
+
+  <!-- Beneficios -->
+  <section id="beneficios">
+    <div class="wrap">
+      <h2>Beneficios del Resveratrol </h2>
+      <div class="grid-3">
+        <div class="card">
+          <h3>Antioxidante natural</h3>
+          <p>Ayuda a reducir el <strong>estrés oxidativo</strong> y protege la integridad celular frente a radicales libres.</p>
+        </div>
+        <div class="card">
+          <h3>Soporte cardiovascular</h3>
+          <p>Favorece la <strong>función endotelial</strong> y la elasticidad vascular, parte clave de la salud del corazón.</p>
+        </div>
+        <div class="card">
+          <h3>Longevidad celular</h3>
+          <p>Contribuye a la <strong>vitalidad celular</strong> y a la respuesta antienvejecimiento a largo plazo.</p>
+        </div>
+      </div>
+      <div class="grid-3" style="margin-top:18px">
+        <div class="card">
+          <h3>Energía y metabolismo</h3>
+          <p>La sinergia con <strong>NAD (B3)</strong> apoya rutas energéticas y el rendimiento diario.</p>
+        </div>
+        <div class="card">
+          <h3>Neuroprotección</h3>
+          <p>Puede favorecer el <strong>flujo sanguíneo cerebral</strong> y la respuesta inflamatoria saludable.</p>
+        </div>
+        <div class="card">
+          <h3>Fórmula 98% pureza</h3>
+          <p>Calidad y trazabilidad para una experiencia consistente en cada presentación.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Cómo tomarlo -->
+  <section id="como-tomarlo" class="wrap grid-2">
+    <div class="card">
+      <h2>¿Cómo tomarlo?</h2>
+      <p>Dosis orientativa: <strong>250–500 mg</strong> al día, preferiblemente con alimentos. En cápsulas o líquido según preferencia.</p>
+      <ul class="bul">
+        <li>Constancia recomendada: <strong>8–12 semanas</strong>.</li>
+        <li>Combina con hábitos: hidratación, sueño y actividad física.</li>
+        <li>Se puede acompañar con otros suplementos según tolerancia.</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h2>Precauciones</h2>
+      <p class="note">No recomendado en embarazo, lactancia ni en menores de edad. Si tomas <strong>anticoagulantes</strong> u otros fármacos, consulta a tu médico antes de usarlo. Este producto es un <strong>suplemento dietario</strong>, no reemplaza una alimentación equilibrada ni tratamientos médicos.</p>
+      <a class="btn primary" href="https://wa.me/573053447946">Comprar ahora</a>
+    </div>
+  </section>
+
+  <!-- Presentaciones y precios -->
+  <section class="wrap products">
+    <h2>Presentaciones y precios</h2>
+    <p class="note">Incluye <strong>domicilio en Medellín</strong> 🚚</p>
+    <div class="grid-3">
+      <div class="card p-card">
+        <img src="30g.png" alt="Resveratrol AZEN 30g (≈60 cápsulas)">
+        <h3>30 g (≈60 cápsulas)</h3>
+        <p>Ideal para iniciar. 98% pureza.</p>
+        <p class="price">$56.900</p>
+        <a class="btn ghost" href="https://wa.me/573053447946">Comprar por WhatsApp</a>
+      </div>
+      <div class="card p-card">
+        <img src="300g.png" alt="Resveratrol AZEN 300g">
+        <h3>300 g</h3>
+        <p>Mayor duración y mejor relación costo/gramo.</p>
+        <p class="price">$65.900</p>
+        <a class="btn ghost" href="https://wa.me/573053447946">Comprar por WhatsApp</a>
+      </div>
+      <div class="card p-card">
+        <img src="500ml.png" alt="Resveratrol AZEN 500ml líquido">
+        <h3>500 ml (líquido)</h3>
+        <p>Absorción rápida, sin cápsulas.</p>
+        <p class="price">$46.900</p>
+        <a class="btn ghost" href="https://wa.me/573053447946">Comprar por WhatsApp</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- BLOG POTENTE: 3 artículos -->
+  <section id="blog" class="wrap blog">
+    <h2>Blog de Resveratrol: Ciencia, Beneficios y Guías</h2>
+
+    <!-- Artículo 1 -->
+    <article id="art1">
+      <h3>Qué es el Resveratrol y sus Beneficios</h3>
+      <p class="lead">El resveratrol es un <strong>polifenol antioxidante</strong> que se encuentra de forma natural en la piel de la uva, frutos rojos y cacao. Su popularidad se debe a su potencial para apoyar la salud cardiovascular, modular la respuesta inflamatoria y contribuir a un envejecimiento saludable.</p>
+
+      <h4>Origen y formas del resveratrol</h4>
+      <p>Este compuesto existe en dos isómeros, <strong>cis</strong> y <strong>trans</strong>, siendo el <em>trans-resveratrol</em> la forma considerada más activa. En suplementos de calidad se estandariza su pureza, como en <strong>Resveratrol AZEN 98%</strong>, para asegurar consistencia y eficacia. En alimentos, aparece en bajas concentraciones, por lo que la suplementación es una vía práctica para obtener cantidades útiles.</p>
+
+      <h4>Beneficios principales</h4>
+      <ul>
+        <li><strong>Antioxidante celular:</strong> contribuye a neutralizar radicales libres, protegiendo membranas y material genético frente al estrés oxidativo.</li>
+        <li><strong>Soporte cardiovascular:</strong> puede favorecer la función endotelial y el tono vascular, aspectos clave de la salud del corazón.</li>
+        <li><strong>Longevidad y energía:</strong> junto con <strong>NAD (B3)</strong>, el resveratrol apoya rutas metabólicas vinculadas a la vitalidad y la eficiencia energética.</li>
+        <li><strong>Neuroprotección:</strong> evidencia preliminar sugiere beneficios en flujo sanguíneo cerebral y marcadores cognitivos.</li>
+      </ul>
+
+      <h4>Cómo tomarlo de forma segura</h4>
+      <p>Una pauta común es <strong>250–500 mg al día</strong> con alimentos, manteniendo constancia al menos por <strong>8–12 semanas</strong>. No se recomienda en embarazo, lactancia ni en combinación con anticoagulantes sin supervisión profesional.</p>
+
+      <p>👉 ¿Lista/o para empezar? <a href="https://wa.me/573053447946">Pide tu Resveratrol AZEN por WhatsApp</a> (domicilio incluido en Medellín).</p>
+    </article>
+
+    <!-- Artículo 2 -->
+    <article id="art2">
+      <h3>Resveratrol y la Salud Cardiovascular: Guía práctica</h3>
+      <p class="lead">La salud cardiovascular depende del buen estado del <strong>endotelio</strong>, la elasticidad vascular y el equilibrio oxidativo. El resveratrol se ha estudiado por su potencial para apoyar estos tres frentes.</p>
+
+      <h4>Función endotelial y tono vascular</h4>
+      <p>El endotelio regula vasodilatación, permeabilidad y coagulación. Bajo estrés oxidativo, su desempeño se altera. El resveratrol, por su acción antioxidante, puede <strong>favorecer la biodisponibilidad de óxido nítrico</strong> y apoyar la función de las células endoteliales, con impacto positivo en la circulación.</p>
+
+      <h4>Colesterol y estrés oxidativo</h4>
+      <p>El colesterol LDL oxidado participa en la aterogénesis. Al reducir la oxidación lipídica, el resveratrol puede contribuir a un entorno vascular más saludable. Esta acción se complementa con hábitos de vida: alimentación balanceada, actividad física y manejo del estrés.</p>
+
+      <h4>Plan de acción en 4 pasos</h4>
+      <ol>
+        <li><strong>Base:</strong> mejora de hábitos (hidratación, fibra, grasas saludables).</li>
+        <li><strong>Movimiento:</strong> 150 min/semana de actividad aeróbica + fuerza.</li>
+        <li><strong>Suplementación:</strong> Resveratrol 250–500 mg/día con alimentos.</li>
+        <li><strong>Monitoreo:</strong> controles periódicos con tu profesional de salud.</li>
+      </ol>
+
+      <p>📌 Recuerda: el resveratrol es un apoyo, no sustituye tratamientos. <a href="https://wa.me/573053447946">Contáctanos por WhatsApp</a>.</p>
+    </article>
+
+    <!-- Artículo 3 -->
+    <article id="art3">
+      <h3>Resveratrol y Envejecimiento Celular: Evidencia y uso seguro</h3>
+      <p class="lead">El envejecimiento está ligado al aumento del <strong>daño oxidativo</strong> y a la disminución de la eficiencia energética celular. El resveratrol se ha explorado como parte de estrategias de <strong>bienestar y longevidad</strong>.</p>
+
+      <h4>Estrés oxidativo y radicales libres</h4>
+      <p>Los radicales libres dañan proteínas, lípidos y ADN. Un sistema antioxidante robusto ayuda a mantener la integridad celular. El resveratrol actúa como <strong>modulador del equilibrio redox</strong>, creando un ambiente más favorable para la homeostasis.</p>
+
+      <h4>Sinergia con Glutatión y NAD (B3)</h4>
+      <p>El <strong>Glutatión</strong> es un antioxidante maestro que interviene en detoxificación y defensa celular. El <strong>NAD (B3)</strong> participa en reacciones de óxido-reducción y en rutas energéticas. Juntos con el resveratrol, conforman una triada orientada a <strong>protección y energía</strong>.</p>
+
+      <h4>Uso seguro y sostenido</h4>
+      <p>Para objetivos de longevidad, se recomienda una aproximación gradual y sostenida, con seguimiento profesional en personas con condiciones médicas. La consistencia (8–12 semanas) es clave para evaluar respuesta.</p>
+
+      <p>✨ Empieza hoy: <a href="https://wa.me/573053447946">Resveratrol</a>.</p>
+    </article>
+  </section>
+
+  <!-- FAQ -->
+  <section id="faq" class="wrap">
+    <h2>Preguntas frecuentes</h2>
+    <div class="faq">
+      <details>
+        <summary>¿En cuánto tiempo se ven resultados?</summary>
+        <p>La mayoría de usuarios percibe cambios entre <strong>8 y 12 semanas</strong> de uso constante junto con hábitos saludables.</p>
+      </details>
+      <details>
+        <summary>¿Puedo combinarlo con otros suplementos?</summary>
+        <p>Sí, suele combinarse con vitamina C u otros antioxidantes. Si tomas medicamentos (p. ej., anticoagulantes), consulta a tu médico.</p>
+      </details>
+      <details>
+        <summary>¿Tiene contraindicaciones?</summary>
+        <p>No recomendado en embarazo, lactancia y menores de edad. Personas bajo tratamiento deben consultar a su profesional de salud.</p>
+      </details>
+    </div>
+  </section>
+
+  <!-- Contacto / Políticas -->
+  <section id="contacto" class="wrap grid-2">
+    <div class="card">
+      <h2>Contacto</h2>
+      <p><b>WhatsApp:</b> <a href="https://wa.me/573053447946">+57 3053447946</a><br>
+         <b>Correo:</b> <a href="mailto:resveratrolazen@gmail.com">resveratrolazen@gmail.com</a><br>
+         <b>Ubicación:</b> Medellín, Colombia</p>
+    </div>
+    <div class="card">
+      <h2>Políticas</h2>
+      <p class="note">Este producto es un <strong>suplemento dietario</strong>, no un medicamento.  
+      No sustituye una alimentación equilibrada ni la asesoría médica profesional.  
+      Recomendamos consultar a un profesional de salud si estás embarazada, lactando, tomas anticoagulantes o estás bajo tratamiento médico.  
+      Envíos en Colombia, con <strong>domicilio incluido en Medellín</strong>.</p>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <div class="wrap">
+    © <span id="y"></span> AZEN. Todos los derechos reservados.
+  </div>
+</footer>
 
 <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
 </body>
