--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AZEN | Suplementos Naturales</title>
   <meta name="description" content="Catálogo AZEN: suplementos naturales para belleza, energía, defensas, digestión, sistema nervioso, huesos, salud femenina y bienestar familiar." />
-  <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="stylesheet" href="estilos.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
