--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AZEN | Suplementos Naturales</title>
   <meta name="description" content="Catálogo AZEN: suplementos naturales para belleza, energía, defensas, digestión, sistema nervioso, huesos, salud femenina y bienestar familiar." />
-  <link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="ESTILOS.CSS" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,7 @@
   </header>
 
   <nav>
-    <a href="belleza.html">Belleza</a>
+    <a href="BELLEZA.HTML">Belleza</a>
     <a href="energia.html">Energía</a>
     <a href="defensas.html">Defensas</a>
     <a href="digestion.html">Digestión</a>
